--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,3 +17,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /siri_wave/
+          workingDir: example
