--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: siri_wave
 description: A Flutter package to create beautiful waveforms like in Siri.
-version: 0.0.1
+version: 0.0.1+1
 repository: https://github.com/halildurmus/siri_wave
 
 environment:
