--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,38 +1,38 @@
 pub_cache:
   folder: ~/.pub-cache
 
-task:
+format_task:
   name: Verify formatting
   container:
-    image: cirrusci/flutter:stable
-  format_script: flutter format . --set-exit-if-changed
+    image: ghcr.io/cirruslabs/flutter:stable
+  format_script: dart format . --set-exit-if-changed
 
-task:
+analyzer_task:
   name: Run analyzer
   container:
-    image: cirrusci/flutter:stable
+    image: ghcr.io/cirruslabs/flutter:stable
   analyze_script:
     - flutter pub get
     - flutter analyze --no-pub
 
-task:
+tests_task:
   name: Run tests
   container:
-    image: cirrusci/flutter:stable
+    image: ghcr.io/cirruslabs/flutter:stable
   test_script: flutter test
 
-task:
+example_android_task:
   name: Build example app (Android)
   container:
-    image: cirrusci/flutter:stable
+    image: ghcr.io/cirruslabs/flutter:stable
   build_script:
     - cd example
     - flutter build apk --debug
 
-task:
+example_ios_task:
   name: Build example app (iOS)
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-monterey-xcode:latest
+    image: ghcr.io/cirruslabs/macos-ventura-xcode:14.3.1
   build_script:
     - cd example
     - flutter build ios --no-codesign --debug
