--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,22 +1,40 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
+  errors:
+    todo: ignore
+
 linter:
   rules:
-    # Some additional lints we want to enforce
-    always_declare_return_types: true
-    cascade_invocations: true
-    directives_ordering: true
-    omit_local_variable_types: true
-    prefer_const_constructors: true
-    prefer_const_literals_to_create_immutables: true
-    prefer_final_in_for_each: true
-    prefer_final_locals: true
-    prefer_relative_imports: true
-    prefer_single_quotes: true
-    sort_child_properties_last: true
-    sort_pub_dependencies: true
-    sort_unnamed_constructors_first: true
-    unawaited_futures: true
-    unnecessary_lambdas: true
-    unnecessary_parenthesis: true
-    use_super_parameters: true
+    - always_declare_return_types
+    - avoid_type_to_string
+    - cascade_invocations
+    - comment_references
+    - directives_ordering
+    - discarded_futures
+    - implicit_reopen
+    - invalid_case_patterns
+    - leading_newlines_in_multiline_strings
+    - literal_only_boolean_expressions
+    - no_default_cases
+    - omit_local_variable_types
+    - prefer_const_constructors
+    - prefer_const_literals_to_create_immutables
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    - prefer_relative_imports
+    - sort_child_properties_last
+    - sort_unnamed_constructors_first
+    - test_types_in_equals
+    - type_literal_in_constant_pattern
+    - unawaited_futures
+    - unnecessary_breaks
+    - unnecessary_lambdas
+    - unnecessary_null_checks
+    - unnecessary_parenthesis
+    - unnecessary_statements
+    - use_super_parameters
