--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: siri_wave
-description: Create beautiful waveforms like in Siri.
-version: 1.0.0
+description: Create visually stunning waveforms similar to those found in Siri.
+version: 1.0.1
 repository: https://github.com/halildurmus/siri_wave
 issue_tracker: https://github.com/halildurmus/siri_wave/issues
 
 screenshots:
-  - description: 'Examples of the iOS 7 style waveform.'
-    path: gifs/ios_7.gif
-  - description: 'Examples of the iOS 9 style waveform.'
+  - description: Example of the iOS 9 style waveform.
     path: gifs/ios_9.gif
+  - description: Example of the iOS 7 style waveform.
+    path: gifs/ios_7.gif
 
 topics:
   - wave
