--- a/example/.gitignore
+++ b/example/.gitignore
@@ -1,13 +1,17 @@
-.DS_Store
-.atom/
+# https://dart.dev/guides/libraries/private-files
+# Created by `dart pub`
+.dart_tool/
+
 .idea/
 .vscode/
-
-.dart_tool/
-.packages
-pubspec.lock
-pubspec_overrides.yaml
 *.iml
 
 # Conventional directory for build output.
 build/
+
+# Directory created by dartdoc
+doc/api/
+
+# Avoid committing pubspec.lock for library packages; see
+# https://dart.dev/guides/libraries/private-files#pubspeclock.
+pubspec.lock
