--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,38 +1,1 @@
-include: package:flutter_lints/flutter.yaml
-
-analyzer:
-  language:
-    strict-casts: true
-    strict-inference: true
-    strict-raw-types: true
-
-linter:
-  rules:
-    - always_declare_return_types
-    - avoid_type_to_string
-    - cascade_invocations
-    - comment_references
-    - directives_ordering
-    - discarded_futures
-    - implicit_reopen
-    - invalid_case_patterns
-    - leading_newlines_in_multiline_strings
-    - literal_only_boolean_expressions
-    - no_default_cases
-    - omit_local_variable_types
-    - prefer_const_constructors
-    - prefer_const_literals_to_create_immutables
-    - prefer_final_in_for_each
-    - prefer_final_locals
-    - prefer_relative_imports
-    - sort_child_properties_last
-    - sort_unnamed_constructors_first
-    - test_types_in_equals
-    - type_literal_in_constant_pattern
-    - unawaited_futures
-    - unnecessary_breaks
-    - unnecessary_lambdas
-    - unnecessary_null_checks
-    - unnecessary_parenthesis
-    - unnecessary_statements
-    - use_super_parameters
+include: package:dartwindows_lints/analysis_options.yaml
