--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: siri_wave
 description: >
   A Flutter package that lets you create visually stunning Siri-style waveforms.
-version: 2.0.0
+version: 2.0.0+1
 repository: https://github.com/halildurmus/siri_wave
 issue_tracker: https://github.com/halildurmus/siri_wave/issues
 
