--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,22 +1,16 @@
-name: Publish to GitHub Pages
+name: Publish
 
 on:
-  release:
-    types:
-      - created
+  pull_request:
+    branches: [main]
+  push:
+    tags: ['v[0-9]+.[0-9]+.[0-9]+*']
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-      - run: flutter pub get
-      - run: flutter test
-      - uses: bluefireteam/flutter-gh-pages@v8
-        with:
-          baseHref: /siri_wave/
-          webRenderer: canvaskit
-          workingDir: example
+  publish:
+    uses: dart-lang/ecosystem/.github/workflows/publish.yaml@main
+    permissions:
+      id-token: write # Required for authentication using OIDC
+      pull-requests: write # Required for writing the pull request note
+    with:
+      use-flutter: true
