--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,16 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  hooks:
+    git:
+      url: https://github.com/halildurmus/workflows.git
+      path: packages/hooks
+  lints:
+    git:
+      url: https://github.com/halildurmus/workflows.git
+      path: packages/lints
 
 flutter:
   uses-material-design: true
