--- a/lefthook.yml
+++ b/lefthook.yml
@@ -11,7 +11,7 @@ pre-commit:
       description: Formats the code according to the project's style guide
     test:
       glob: '{lib,test}/**/*.dart'
-      run: dart run hooks:test
+      run: dart run hooks:test --flutter
       description: Runs the test suite to ensure all tests pass
     bump_version:
       glob: 'lib/**/*.{dart}'
