--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -1,6 +1,10 @@
-name: Deploy Flutter Example App to GitHub Pages
+name: Website
 
 on:
+  pull_request:
+    paths:
+      - .github/workflows/website.yml
+      - example/**
   push:
     branches: [main]
     paths:
@@ -9,6 +13,9 @@ on:
 
 jobs:
   build:
+    if: ${{ github.event_name == 'pull_request' }}
+    name: Build
+
     defaults:
       run:
         working-directory: example
@@ -28,18 +35,50 @@ jobs:
       - name: 📦 Install Dependencies
         run: flutter pub get
 
-      - name: 🛠️ Enable Web Support & Build
+      - name: 👷 Build Website
         run: |
           flutter config --enable-web
-          flutter build web --release --wasm --base-href /siri_wave/
+          flutter build web --base-href /siri_wave/ --release --wasm
 
-      - name: 📢 Prepare Git for Deployment
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions@github.com"
+  deploy:
+    if: ${{ github.event_name == 'push' }}
+    name: Deploy to GitHub Pages
 
-      - name: 📤 Commit and Push Changes to GitHub Pages
+    permissions:
+      contents: write
+      id-token: write
+      pages: write
+
+    defaults:
+      run:
+        working-directory: example
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 📚 Git Checkout
+        uses: actions/checkout@v4
+
+      - name: 🐦 Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          cache: true
+          cache-key: flutter-${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
+
+      - name: 📦 Install Dependencies
+        run: flutter pub get
+
+      - name: 👷 Build Website
         run: |
-          git --work-tree build/web add --all
-          git commit -m "Deploy Flutter example app to GitHub Pages"
-          git push origin HEAD:gh-pages --force
+          flutter config --enable-web
+          flutter build web --base-href /siri_wave/ --release --wasm
+
+      - name: ☁️ Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          commit_message: ${{ github.event.head_commit.message }}
+          force_orphan: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/web
+          user_name: github-actions[bot]
+          user_email: github-actions[bot]@users.noreply.github.com
