--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -79,6 +79,6 @@ jobs:
           commit_message: ${{ github.event.head_commit.message }}
           force_orphan: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+          publish_dir: ./example/build/web
           user_name: github-actions[bot]
           user_email: github-actions[bot]@users.noreply.github.com
