--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,6 @@
 name: example
-description: A new Flutter project.
+description: siri_wave demo
 publish_to: none
-version: 1.0.0+1
 
 environment:
   sdk: ^3.5.0
