ci: tweak cliff.toml

--- a/cliff.toml
+++ b/cliff.toml
@@ -17,8 +17,7 @@ body = """
 {% macro print_commit(commit) -%}
     - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
         {% if commit.breaking %}[**breaking**] {% endif %}\
-        {{ commit.message | upper_first }} - \
-        ([{{ commit.id | truncate(length=7, end="") }}](<REPO>/commit/{{ commit.id }}))\
+        {{ commit.message | upper_first }}\
 {% endmacro -%}
 
 {% macro print_username(username) -%}
