--- a/.github/workflows/prepare_release.yml
+++ b/.github/workflows/prepare_release.yml
@@ -17,16 +17,16 @@ jobs:
       - name: 🔍 Check if New Release is Needed
         id: check_version
         run: |
-          current_version=$(grep '^version:' pubspec.yaml | awk '{print $2}')
+          current_version=$(grep '^version:' pubspec.yaml | awk '{print $2}' | xargs)
           if [[ "$current_version" == *"-wip" ]]; then
-            echo "needs_release=true" >> $GITHUB_ENV
+            echo "needs_release=true" >> $GITHUB_OUTPUT
           else
-            echo "needs_release=false" >> $GITHUB_ENV
+            echo "needs_release=false" >> $GITHUB_OUTPUT
           fi
 
   prepare-release:
     needs: check-version
-    if: needs.check-version.outputs.needs_release == 'true'
+    if: ${{ needs.check-version.outputs.needs_release == 'true' }}
     uses: halildurmus/workflows/.github/workflows/prepare_release.yml@main
     secrets:
       token: ${{ secrets.PAT }}
