--- a/.github/workflows/prepare_release.yml
+++ b/.github/workflows/prepare_release.yml
@@ -17,10 +17,18 @@ jobs:
       - name: 🔍 Check if New Release is Needed
         id: check_version
         run: |
+          # Extract the version from the pubspec.yaml and trim any extra spaces
           current_version=$(grep '^version:' pubspec.yaml | awk '{print $2}' | xargs)
+
+          # Output the current version
+          echo "Current Version: $current_version"
+
+          # Check if the current version has "-wip" suffix
           if [[ "$current_version" == *"-wip" ]]; then
+            echo "A new release is needed based on version suffix."
             echo "needs_release=true" >> $GITHUB_OUTPUT
           else
+            echo "No new release is needed."
             echo "needs_release=false" >> $GITHUB_OUTPUT
           fi
 
