--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,4 +9,4 @@ jobs:
     name: Publish to pub.dev
     permissions:
       id-token: write
-    uses: halildurmus/workflows/.github/workflows/flutter_publish.yml@main
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@main
